force-app/main/default/objects/Colaborador__c/Colaborador__c.object-meta.xml
<CustomObject>
    <label>Colaborador</label>
    <nameField>
        <label>Colaborador Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colaboradores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>