force-app/main/default/objects/Colaborador__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Empresa do colaborador</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Colaboradores</relationshipLabel>
    <relationshipName>Colaboradores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>