force-app/main/default/objects/Colaborador__c/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <description>CPF (com máscara)</description>
    <label>CPF</label>
    <length>200</length>
    <type>Text</type>
</CustomField>