force-app/main/default/objects/Colaborador__c/fields/Data_da_Sincronizacao_do_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Sincronizacao_do_Status__c</fullName>
    <label>Data da Sincronização do Status</label>
    <type>Date</type>
</CustomField>