force-app/main/default/objects/Colaborador__c/fields/Data_Inclusao__c.field-meta.xml
<CustomField>
    <fullName>Data_Inclusao__c</fullName>
    <label>Data de Inclusão</label>
    <type>Date</type>
</CustomField>