force-app/main/default/objects/Colaborador__c/fields/Email_Corporativo__c.field-meta.xml
<CustomField>
    <fullName>Email_Corporativo__c</fullName>
    <description>E-mail Corporativo</description>
    <label>Email Corporativo</label>
    <type>Email</type>
</CustomField>