force-app/main/default/objects/Colaborador__c/fields/Nome_Completo__c.field-meta.xml
<CustomField>
    <fullName>Nome_Completo__c</fullName>
    <label>Nome Completo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>