force-app/main/default/objects/Colaborador__c/fields/Status_Elegibilidade__c.field-meta.xml
<CustomField>
    <fullName>Status_Elegibilidade__c</fullName>
    <label>Status Elegibilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Elegível</fullName>
            </value>
            <value>
                <fullName>Inelegível</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>