force-app/main/default/objects/Colaborador__c/validationRules/CPF_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CPF_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
  REGEX(
    CPF__c, 
    &quot;^([0-9]{11}|[0-9]{3}\\.[0-9]{3}\\.[0-9]{3}\\-[0-9]{2})$&quot;
  )
)</errorConditionFormula>
    <errorDisplayField>CPF__c</errorDisplayField>
    <errorMessage>O CPF deve ter exatamente 11 números.</errorMessage>
</ValidationRule>