force-app/main/default/objects/Colaborador__c/validationRules/TESTE_Bloquear_Update_Temporario.validationRule-meta.xml
<ValidationRule>
    <fullName>TESTE_Bloquear_Update_Temporario</fullName>
    <active>false</active>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>Update bloqueado propositalmente para teste do Fault Path</errorMessage>
</ValidationRule>